releases may be found in the file ChangeLog.txt.

New Features for 3.27.1
=======================
[3421963] Centralized Password Policies can now be saved in a database, managed (added,
edited and deleted), exported and imported, used in filters and to generate passwords.

Changes to Existing Features in 3.27.1
======================================
[3445820] The Edit menu item and entry right-click context menu item "Copy Run Command to
Clipboard" will, by default, substitute any variables within the command. To disable this,
hold down the Ctrl key when selecting these menu items.  The standard menu shortcut cannot
be used to disable the substitution as the Ctrl key may be used to select a different
menu item/command.
[] As indicated with the V3.26 release, date time fields, when exported to XML,
now are in the W3C dateTime standard format instead of PasswordSafe's.  This release
can nolonger import XML files with date time fields in the old PasswordSafe's forms.
See Help file (the XML section of "Import Password Entries") on how to manually change
the XML file exported prior to V3.26 to allow it to be successfully imported in this release.
[] After closing the current database, on opening another, PasswordSafe will first
attempt to access the directory of the last opened database in order to allow the user
to start browsing for their intended database.  If this directory is not available,
PasswordSafe will open the default "My Safes" directory as it did prior to this change.

Bugs fixed in 3.27.1
====================
[3468853] The number of saved passwords can be changed and after the user presses Apply
they will no longer be warned that the entry has been changed when pressing Cancel.
[3462520] A password entry's expiry time in days now correctly
reflects the expiration date for non-recurring expiration.
[3440318] Filters can now be cleared by double-clicking on the filter indicator in
the status bar. Also, Filter Menu correctly changed when a filter is active.